# chessagon

./: Cargo.toml  README.md  mprocs.yaml
cli/: Cargo.toml  chessagon.sqlite3
cli/src/: board.rs  main.rs  runner.rs
engine/: Cargo.toml
engine/examples/: example.rs
engine/src/: board.rs  game.rs  lib.rs  main.rs
engine/src/board/: mod.rs  peekable.rs  standard.rs
engine/src/game/: mod.rs  pieces.rs  status.rs  test.rs  tests.rs
engine/src/moves/: mod.rs  parse.rs
engine/src/piece/: bishop.rs  king.rs  knight.rs  mod.rs  pawn.rs  queen.rs  rook.rs  test.rs
engine/src/vector/: mod.rs
frontend/: README.md  package.json  pnpm-lock.yaml
frontend/src/lib/: utils.ts  vectors.ts
frontend/src/routes/: +layout.svelte
hext-boards/: Cargo.toml  README.md
hext-boards/src/: lib.rs
hext-boards/src/board/: mod.rs
hext-boards/src/board/test/: mod.rs
site/: .env.local  .gitignore  build.sh  db.sqlite  drizzle.config.ts  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.ts  vite.config.js  vite.config.js.timestamp-1695657808570-207f6dea87211.mjs  vite.config.js.timestamp-1695931819785-4bdce2789a651.mjs  vite.config.js.timestamp-1696101247031-375475e0a282.mjs
site/.wasm-engine/: chessagon.d.ts  chessagon.js  chessagon_bg.js  chessagon_bg.wasm  chessagon_bg.wasm.d.ts  package.json
site/drizzle/: 0000_famous_fabian_cortez.sql  0000_narrow_big_bertha.sql  0000_windy_rattler.sql  0001_exotic_cannonball.sql  0001_mean_winter_soldier.sql  0001_mixed_monster_badoon.sql  0002_curved_silver_sable.sql  0002_long_tarot.sql  0002_orange_wild_pack.sql  0003_wide_namora.sql  0004_red_edwin_jarvis.sql  0005_clever_cannonball.sql  0006_known_zarda.sql
site/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  0005_snapshot.json  0006_snapshot.json  _journal.json
site/src/: app.d.ts  app.html  app.postcss  hooks.server.ts  styles.css
site/src/lib/: fonts.postcss  timeControls.ts  utils.ts  wasmTypesGlue.ts
site/src/routes/: +layout.server.ts  +layout.svelte  +layout.ts  +page.svelte  Nav.svelte  Title.svelte
site/supabase/: config.toml
(+87 files in other folders)
