[package]
name = "chessagon-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chessagon = { path = "../engine" }
glam = "0.24.1"
hext-boards = { path = "../hext-boards" }
rustyline = { version = "12.0.0", features = ["with-sqlite-history"] }
thiserror = "1.0.48"
