[package]
name = "chessagon"
version = "0.1.0"
edition = "2021"
license.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true

[features]
default = ["wasm"]
wasm = ["dep:wasm-bindgen"]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
chic = "1.2.2"
derive_more = "0.99.17"
enum_dispatch = "0.3.12"
js-sys = "0.3.61"
once_cell = "1.18.0"
peg = "0.8.1"
thiserror = "1.0.48"
wasm-bindgen = { version = "0.2.87", optional = true }
